[ADD] documentation swagger for task controller.
