# storage/api-docs/api-docs.json
@@ -1639,6 +1639,28 @@
                 ],
                 "summary": "Delete task",
                 "operationId": "a4d99610c2c87fe57b555a8a7011968e",
+                "parameters": [
+                    {
+                        "name": "projectId",
+                        "in": "path",
+                        "description": "Project ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "a1b2c3d4-e5f6-g7h8-i9j0-k1l2m3n4o5p6"
+                        }
+                    },
+                    {
+                        "name": "taskId",
+                        "in": "path",
+                        "description": "Task ID",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "a1b2c3d4-e5f6-g7h8-i9j0-k1l2m3n4o5p6"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1717,7 +1739,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
